Fix scrolling bug on tablets, and only make overflow-y scrollable.

--- a/sass/partials/layout/_menu.scss
+++ b/sass/partials/layout/_menu.scss
@@ -70,7 +70,7 @@
 .touch {
 
   #posts-items {
-    overflow: scroll !important;
+    overflow-y: scroll !important;
   }
 }
 
